人数選択して<input>が増えるjQuery，form-submitでページ遷移など

--- a/application/modules/default/lib/config.ini
+++ b/application/modules/default/lib/config.ini
@@ -9,7 +9,7 @@ database.type     = pdo_mysql
 database.host     = localhost
 database.username = root
 database.password = password
-database.name     = yurimportfolio
+database.name     = tatekae-san
 database.charset    = utf8
 
 [datasourceread1]
@@ -17,7 +17,7 @@ database.type     = pdo_mysql
 database.host     = localhost
 database.username = root
 database.password = password
-database.name     = yurimportfolio
+database.name     = tatekae-san
 database.charset    = utf8
 
 [datasourceread2]
@@ -25,5 +25,5 @@ database.type     = pdo_mysql
 database.host     = localhost
 database.username = root
 database.password = password
-database.name     = yurimportfolio
+database.name     = tatekae-san
 database.charset    = utf8
